force-app/main/default/objects/Imposter_Syndrome_Session__c/Imposter_Syndrome_Session__c.object-meta.xml
<CustomObject>
    <description>Stores imposter syndrome therapy sessions with before/after believability tracking for PWA sync</description>
    <label>Imposter Syndrome Session</label>
    <pluralLabel>Imposter Syndrome Sessions</pluralLabel>
    <nameField>
        <displayFormat>IMP-{0000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>