force-app/main/default/objects/Imposter_Syndrome_Session__c/fields/Believability_After__c.field-meta.xml
<CustomField>
    <fullName>Believability_After__c</fullName>
    <label>Believability After</label>
    <description>How believable the thought was after seeing counter-evidence (1-10)</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>