force-app/main/default/objects/Imposter_Syndrome_Session__c/fields/Counter_Facts__c.field-meta.xml
<CustomField>
    <fullName>Counter_Facts__c</fullName>
    <label>Counter Facts</label>
    <description>Evidence-based facts that counter the imposter thought</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>