force-app/main/default/objects/Imposter_Syndrome_Session__c/fields/Reduction__c.field-meta.xml
<CustomField>
    <fullName>Reduction__c</fullName>
    <label>Reduction</label>
    <description>How much believability was reduced (Before - After)</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <formula>Believability_Before__c - Believability_After__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>