force-app/main/default/objects/Imposter_Syndrome_Session__c/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <label>Session Date</label>
    <description>Date and time when the session occurred</description>
    <type>DateTime</type>
    <required>true</required>
</CustomField>