force-app/main/default/objects/Imposter_Syndrome_Session__c/fields/Thought__c.field-meta.xml
<CustomField>
    <fullName>Thought__c</fullName>
    <label>Imposter Thought</label>
    <description>The imposter syndrome thought that was challenged</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>